# waydapt-rust

./: .gitignore  Cargo.toml  LICENSE  build.rs
src/: #session.rs#  addons.rs  basics.rs  buffers.rs  builtin.rs  crate_traits.rs  event_loop.rs  for_handlers.rs  forking.rs  handlers.rs  header.rs  input_handler.rs  listener.rs  main.rs  map.rs  mediator.rs  message.rs  multithread_exit.rs  parse.rs  postparse.rs  protocol.rs  session.rs  setup.rs  socket_events.rs  streams.rs  terminator.rs  test_utils.rs  version_info.rs
tests/: parse-test-protocol.xml
