[package]
name = "waydapt"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
nolinkedlist = []


[dependencies]
arrayvec = "0.7.4"
getopts = "0.2.21"
quick-xml = "0.31.0"
smallvec = "1.13.2"

[build-dependencies.vergen-gitcl]
version = "1.0.0"
features = [
	 "build",
	 "cargo",
	 "rustc"
]

[dependencies.rustix]
version = "0.38.34"
features = [
    "event",
    "fs",
    "net",
    "process",
]

[dependencies.nix]
version = "0.29.0"
features = [ "process", "pthread", "signal" ]


[profile.release]
codegen-units = 1
strip = true
lto = "fat"

[profile.small]
codegen-units = 1
inherits = "release"
opt-level = "z"
strip = true
debug-assertions = false
lto = "fat"

